--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="hello">Hello World, DittoAndroidActivity!</string>
-    <string name="app_name">DittoAndroid</string>
-
+    <string name="app_name">Ditto</string>
+	<string name="insa">Hello?</string>
+	<string name="anyoung">안녕하세요?</string>
 </resources>
